src/App.css
/* Default font for whole site */
body {
  font-family: 'Poppins', sans-serif;
  margin: 0;
  padding: 0;
}

/* Headings use Poppins SemiBold/Bold look */
h1, h2, h3, h4, h5, h6 {
  font-family: 'Poppins', sans-serif;
  font-weight: 600; /* adjust to 500, 600, or 700 as per your design */
}

/* Content text (paragraphs, lists, links, spans, etc.) */
p, li, a, blockquote {
  font-family: 'Poppins', sans-serif;
  font-weight: 400;
}
span {
  font-family: 'Poppins', sans-serif;
}

::placeholder {
  color: #9e9e9e;       /* make it black */
  opacity: 1;        /* important, some browsers fade placeholders */
}

